--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,8 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.5.19",
-    "@types/lodash": "^4.14.167"
-  }
+    "@types/lodash": "^4.14.167",
+    "gh-pages": "^3.1.0"
+  },
+  "homepage": "https://www.danielramos.me/patripatri/"
 }
