--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "date-fns": "^2.16.1",
     "firebase": "^8.2.2",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.20",
